--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,9 @@ services:
     image: postgres:15
     container_name: database
     environment:
-      POSTGRES_DB: saas_db
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: ${DB_NAME:-saas_db}
+      POSTGRES_USER: ${DB_USER:-postgres}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-postgres}
       POSTGRES_EXTENSIONS: uuid-ossp
     ports:
       - "5432:5432"  # Fixed: external:internal
@@ -27,12 +27,12 @@ services:
     ports:
       - "5000:5000"  # Fixed: external:internal
     environment:
-      DB_HOST: database
-      DB_PORT: 5432
-      DB_NAME: saas_db
-      DB_USER: postgres
-      DB_PASSWORD: postgres
-      JWT_SECRET: my_secret_key_for_development_only_do_not_use_in_production
+      DB_HOST: ${DB_HOST:-database}
+      DB_PORT: ${DB_PORT:-5432}
+      DB_NAME: ${DB_NAME:-saas_db}
+      DB_USER: ${DB_USER:-postgres}
+      DB_PASSWORD: ${DB_PASSWORD:-postgres}
+      JWT_SECRET: ${JWT_SECRET:-super-secret-jwt-key-change-in-production}
       FRONTEND_URL: http://frontend:3000  # Use service name, not localhost
     depends_on:
       database:
