--- a/backend/.env
+++ b/backend/.env
@@ -6,7 +6,7 @@ DB_USER=postgres
 DB_PASSWORD=postgres
 
 # JWT Configuration
-JWT_SECRET=my_secret_key_for_development_only_do_not_use_in_production
+JWT_SECRET=my-secret-key-min-32-characters-change-in-prod
 JWT_EXPIRES_IN=24h
 
 # Server Configuration
@@ -15,3 +15,9 @@ NODE_ENV=development
 
 # Frontend URL (for CORS)
 FRONTEND_URL=http://localhost:3000
+
+# Optional: Email configuration
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USER=
+EMAIL_PASSWORD=
