--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,17 +1,23 @@
-# Database Configuration
+#### Database
 DB_HOST=localhost
 DB_PORT=5432
 DB_NAME=saas_db
 DB_USER=postgres
-DB_PASSWORD=postgres
+DB_PASSWORD=your_password
 
-# JWT Configuration
-JWT_SECRET=your_jwt_secret_key_min_32_chars_for_security
+#### JWT
+JWT_SECRET=your_jwt_secret_key_min_32_chars
 JWT_EXPIRES_IN=24h
 
-# Server Configuration
+#### Server
 PORT=5000
 NODE_ENV=development
 
-# Frontend URL (for CORS)
+#### Frontend URL (for CORS)
 FRONTEND_URL=http://localhost:3000
+
+#### Optional: Email configuration
+EMAIL_HOST=
+EMAIL_PORT=
+EMAIL_USER=
+EMAIL_PASSWORD=
