--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,8 @@
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
     "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "migrate": "node src/utils/migrate.js"
   },
   "dependencies": {
