--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "start": "node src/server.js",
     "dev": "nodemon src/server.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "migrate": "node src/utils/migrate.js"
+    "test": "NODE_ENV=test jest",
+    "test:watch": "NODE_ENV=test jest --watch",
+    "test:coverage": "NODE_ENV=test jest --coverage",
+    "migrate": "node src/utils/migrate.js",
+    "seed": "node src/utils/seed.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
